tests/samples/negative/functions/function_prototype_duplicate.ax
module function_prototype_duplicate;

fn value() -> i32;
fn value() -> i32;

fn value() -> i32 {
    return 0;
}

fn main() -> i32 {
    return value();
}
